fix overflow

--- a/sass/application.scss
+++ b/sass/application.scss
@@ -4,12 +4,15 @@ $linkgrey: #5a5a5a;
 $accentdark: #e12d54;
 $accentlight: #f2e6e3;
 body {
-  font-family: "Karla", sans-serif;
+  font-family: 'Karla', sans-serif;
   background-color: $bg;
   padding-top: 120px;
   @media screen and (min-width: 767px) {
     padding-top: 95px;
   }
+}
+.body-nomodal {
+  overflow-y: initial;
 }
 
 .form-group.is-invalid {
@@ -39,7 +42,7 @@ h4,
 h5,
 h6,
 p {
-  font-family: "Karla", sans-serif;
+  font-family: 'Karla', sans-serif;
   margin: 0;
 }
 
@@ -55,7 +58,7 @@ button {
   padding: 0;
 }
 
-input[type="checkbox" i] {
+input[type='checkbox' i] {
   border-radius: 0;
 }
 
@@ -250,7 +253,7 @@ ul {
 }
 .vendor {
   text-transform: capitalize;
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .rec-card {
@@ -365,7 +368,7 @@ ul {
               cursor: pointer;
 
               &:after {
-                content: "+";
+                content: '+';
                 display: block;
                 position: absolute;
                 top: 50%;
@@ -493,7 +496,7 @@ ul {
     width: 22px;
     height: 2px;
     background: $accentdark;
-    content: "";
+    content: '';
     position: absolute;
     display: block;
     transition: all 0.5s ease-in-out;
@@ -622,9 +625,9 @@ ul {
   grid-template-columns: 2fr 1fr;
   grid-template-rows: auto;
   gap: 2rem;
-  grid-template-areas: "image1 image1" "infoblock infoblock" "cartblock cartblock" "image2 image2";
+  grid-template-areas: 'image1 image1' 'infoblock infoblock' 'cartblock cartblock' 'image2 image2';
   @media screen and (min-width: 500px) {
-    grid-template-areas: "image1 cartblock" "infoblock cartblock" "image2 cartblock";
+    grid-template-areas: 'image1 cartblock' 'infoblock cartblock' 'image2 cartblock';
   }
   .add-to-cart-block {
     grid-area: cartblock;
@@ -713,7 +716,7 @@ ul {
   }
   p {
     font-size: 0.9rem;
-    font-family: "Courier New", Courier, monospace;
+    font-family: 'Courier New', Courier, monospace;
   }
 }
 
@@ -957,7 +960,7 @@ ul {
       }
       .btn-secondary:after {
         border: none;
-        content: "";
+        content: '';
         background-repeat: no-repeat;
         background-position: left 1rem center;
         background-size: 16px 12px;
@@ -1095,7 +1098,7 @@ footer {
     filter: invert(60%);
   }
   .sib-form {
-    font-family: "Karla", sans-serif;
+    font-family: 'Karla', sans-serif;
     text-align: center;
     background-color: white;
     #error-message {
